err/ndg-oauth-server.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Beaker-1.9.0.egg-info'...
Listing './lib/python3.5/site-packages/Genshi-0.7.egg-info'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/PasteDeploy-1.5.2.dist-info'...
Listing './lib/python3.5/site-packages/PasteScript-2.0.2.dist-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/beaker'...
Listing './lib/python3.5/site-packages/beaker/crypto'...
Listing './lib/python3.5/site-packages/beaker/ext'...
Listing './lib/python3.5/site-packages/genshi'...
Listing './lib/python3.5/site-packages/genshi/filters'...
Listing './lib/python3.5/site-packages/genshi/filters/tests'...
Listing './lib/python3.5/site-packages/genshi/template'...
Listing './lib/python3.5/site-packages/genshi/template/tests'...
Listing './lib/python3.5/site-packages/genshi/template/tests/templates'...
Listing './lib/python3.5/site-packages/genshi/tests'...
Listing './lib/python3.5/site-packages/ndg'...
Listing './lib/python3.5/site-packages/ndg/oauth'...
Listing './lib/python3.5/site-packages/ndg/oauth/server'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples/bearer_tok'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples/bearer_tok/static'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples/bearer_tok/static/layout'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples/bearer_tok/templates'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples/shared_config'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples/shared_config/pki'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples/shared_config/pki/ca'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples/slcs'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples/slcs/static'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples/slcs/static/layout'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/examples/slcs/templates'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/lib'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/lib/access_token'...
Compiling './lib/python3.5/site-packages/ndg/oauth/server/lib/access_token/myproxy_cert_token_generator.py'...
***   File "./lib/python3.5/site-packages/ndg/oauth/server/lib/access_token/myproxy_cert_token_generator.py", line 78
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/oauth/server/lib/authenticate'...
Compiling './lib/python3.5/site-packages/ndg/oauth/server/lib/authorization_server.py'...
***   File "./lib/python3.5/site-packages/ndg/oauth/server/lib/authorization_server.py", line 198
    except OauthException, exc:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/oauth/server/lib/authorize'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/lib/oauth'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/lib/register'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/lib/render'...
Compiling './lib/python3.5/site-packages/ndg/oauth/server/lib/render/factory.py'...
***   File "./lib/python3.5/site-packages/ndg/oauth/server/lib/render/factory.py", line 126
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/oauth/server/lib/resource_request'...
Compiling './lib/python3.5/site-packages/ndg/oauth/server/lib/resource_request/myproxy_cert_request.py'...
***   File "./lib/python3.5/site-packages/ndg/oauth/server/lib/resource_request/myproxy_cert_request.py", line 67
    except Exception, exc:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/oauth/server/lib/utils'...
Compiling './lib/python3.5/site-packages/ndg/oauth/server/lib/utils/repoze_who_utils.py'...
***   File "./lib/python3.5/site-packages/ndg/oauth/server/lib/utils/repoze_who_utils.py", line 114
    except Exception, why:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ndg/oauth/server/templates'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/templates/public'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/templates/public/js'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/templates/public/layout'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/templates/public/layout/icons'...
Listing './lib/python3.5/site-packages/ndg/oauth/server/wsgi'...
Listing './lib/python3.5/site-packages/ndg_oauth_server-0.6.0.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/+package+'...
Listing './lib/python3.5/site-packages/paste/deploy/paster_templates/paste_deploy/docs'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/script'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package'...
Listing './lib/python3.5/site-packages/paste/script/paster-templates/basic_package/+package+'...
Listing './lib/python3.5/site-packages/paste/script/util'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/repoze'...
Listing './lib/python3.5/site-packages/repoze/who'...
Listing './lib/python3.5/site-packages/repoze/who/plugins'...
Listing './lib/python3.5/site-packages/repoze/who/plugins/tests'...
Listing './lib/python3.5/site-packages/repoze/who/plugins/tests/fixtures'...
Listing './lib/python3.5/site-packages/repoze/who/tests'...
Listing './lib/python3.5/site-packages/repoze.who-2.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
